--- a/index.html
+++ b/index.html
@@ -5,10 +5,8 @@
         <title>Project: webpage</title>
     </head>
     <body>
+        <p>Hoi een bekende zoekmachine is <a href="https://www.google.com/://www.google.nl">google</a>.</p>
 
-<h1>Hoi 1</h1>
-
-<p>Hoi 2</p>
 
     </body>
 </html>
