--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <title>Project: webpage</title>
     </head>
     <body>
-        <p>Hoi een bekende zoekmachine is <a href="https://www.google.com/://www.google.nl">google</a>.</p>
+        <p>Hoi een bekende zoekmachine is <a href="https://www.google.com">google</a>.</p>
 
 
     </body>
